# bcp-concept-prototype

./: CMakeLists.txt  LICENSE  README.md  cmake32.bat
apps/: CMakeLists.txt  bridge_message.inl  game_message.inl  node_message.inl  protocol.inl
apps/bridge-server/: CMakeLists.txt  bridge_game_server.hpp  bridge_node_server.hpp  bridge_server.hpp  bridge_server_app.hpp  main.cpp
apps/bridge-server-app/: CMakeLists.txt  main.cpp
apps/bridge-server-lib/: CMakeLists.txt  app_config.hpp  bridge_server.hpp  game_server.hpp  stdafx.hpp
apps/game-client/: CMakeLists.txt  game_client.hpp  main.cpp
apps/game-client-app/: CMakeLists.txt  main.cpp
apps/game-client-lib/: CMakeLists.txt  app_config.hpp  game_client.hpp  game_client_lib.hpp  node_client.hpp  user_client.hpp
apps/game-server/: CMakeLists.txt  bridge_client.hpp  game_server.hpp  main.cpp
apps/game-server-app/: CMakeLists.txt  main.cpp
apps/game-server-lib/: CMakeLists.txt  game_server.hpp  game_server_lib.hpp  user_server.hpp
apps/node-server/: CMakeLists.txt  _vector.hpp  app_config.hpp  block_chain.hpp  bridge_client.hpp  main.cpp  node_account.hpp  node_message.inl  node_server.hpp  node_session.hpp
apps/node-server-app/: CMakeLists.txt  main.cpp
apps/node-server-lib/: CMakeLists.txt  app_config.hpp  bcp.hpp  bridge_server.hpp  node_server.hpp  node_server_lib.hpp  stdafx.hpp  user_server.hpp
apps/node-server-lib/bcp/: bcp_config.hpp  bcp_host.hpp  round_helper.hpp  round_provider.hpp
bryllite-common/: CMakeLists.txt  assert.hpp  bryllite-common.hpp  bytestream.hpp  clog.hpp  colors.hpp  enum.hpp  exception.hpp  fsm.hpp  lockable.hpp  log.hpp  singleton.hpp  stdafx.hpp  threadable.hpp  timer.hpp  types.hpp  utils.hpp  version.hpp  version.hpp.in
bryllite-core/: CMakeLists.txt  account.hpp  address.hpp  base58.cpp  base58.hpp  bcp_server.hpp  bcp_timer.hpp  block.hpp  block_chain.hpp  block_header.hpp  bryllite-core.hpp  coin.hpp  key.hpp  keypair.hpp  leveldb.hpp  message.inl  peer.hpp  peer_client.hpp  peer_data.hpp  peer_host.hpp  peer_server.hpp  peer_session.hpp  privatekey.hpp  publickey.hpp  ripemd160.cpp  ripemd160.hpp  secp256k1.hpp  secp256r1.cpp  secp256r1.hpp  secret.hpp  sha256.cpp  sha256.hpp  socket_buffer.hpp  stdafx.hpp  tcp_client.hpp  tcp_server.hpp  transaction.hpp  udp_client.hpp  udp_server.hpp  uint256.cpp  (+2 more)
build.msvc/: README.md  cmake32.bat
include/openssl/: opensslconf.h
libs/Debug/: bryllite-common.lib
libs/Release/: bridge-server-lib.lib  bryllite-common.lib  game-client-lib.lib  game-server-lib.lib  node-server-lib.lib
tests/: CMakeLists.txt
tests/dev/: CMakeLists.txt  bcp.cpp  bcp_server.cpp  bcp_server.hpp  bcp_test.cpp  ecc_test.cpp  echoclient.cpp  echoserver.cpp  key_test.cpp  lock.cpp  message.inl  node_main.cpp  node_message.inl  openssl_test.cpp  runtime_test.cpp  secp256k1.cpp  test1.cpp  udpclient.cpp  udpserver.cpp
tests/dev/bcp_mono/: CMakeLists.txt  _vector.cpp  _vector.hpp  block_chain.cpp  block_chain.hpp  main.cpp  node.cpp  node.hpp  node_manager.cpp  node_manager.hpp  node_message.inl
tests/dev/node-server/: CMakeLists.txt  main.cpp  node_server.cpp  node_server.hpp  stdafx.hpp
tests/dev/node-server-mono/: CMakeLists.txt  bcp_server.cpp  bcp_server.hpp  block_chain.cpp  block_chain.hpp  main.cpp  node_account.cpp  node_account.hpp  node_manager.cpp  node_manager.hpp  node_message.inl  node_server.cpp  node_server.hpp  stdafx.hpp
tests/dev/p2p_server/: CMakeLists.txt  byte_stream.cpp  byte_stream.hpp  main.cpp  node_client.cpp  node_client.hpp  node_server.cpp  node_server.hpp  p2p_client.cpp  p2p_client.hpp  p2p_host.cpp  p2p_host.hpp  p2p_server.cpp  p2p_server.hpp  p2p_session.cpp  p2p_session.hpp  peer.cpp  peer.hpp  peer_message.inl
tests/unit_test/: CMakeLists.txt  key_test.cpp  sign_test.cpp  vector_test.cpp
