# bryllite node server lib
#add_subdirectory( node-server-lib )

# bryllite node server app
add_subdirectory( node-server-app )

# bryllite bridge server lib
#add_subdirectory( bridge-server-lib )

# bryllite bridge server app
add_subdirectory( bridge-server-app )

# bryllite game server lib
#add_subdirectory( game-server-lib )

# bryllite game server app
add_subdirectory( game-server-app )

# bryllite game client lib
#add_subdirectory( game-client-lib )

# bryllite game client app
add_subdirectory( game-client-app )

# bryllite node server app ( for test )
#add_subdirectory( node-server-testapp )
